--- a/cash book/index.html
+++ b/cash book/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="container">
         <nav>
             <div class="logo">Cash Book</div>
@@ -48,7 +49,7 @@
         </div>
     </div>
 
-    <h5>Entries</h5>
+    <h5 style="color: white;" id="date"></h5>
     <div class="entries">
     </div>
 
@@ -56,6 +57,9 @@
          <button id="cashIn" type="submit">+ Cash In</button>
          <button  id="cashOut" type="submit">- Cash Out</button>
     </div>
+
+    </div>
+
 
     <script src="script.js"></script>
 </body>
